Fri May  1 13:30:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dln.c (dln_load): check if a different libruby is loaded by the
	  extension library, and then bail out to get rid of very frequent
	  reported stale bug reports.

Thu Apr 30 19:51:11 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_compile_each): revert r46873 and r46875, not to
	  allow to execute private readers by pretending op assign.
	  [ruby-core:68984] [Bug #11096]

Thu Apr 30 17:02:33 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* rational.c: Added documentation for rational literal.
	  [Bug #11075][fix GH-885][ci skip] Patch by @shishir127

Thu Apr 30 16:39:44 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/ipsocket.c (init_inetsock_internal): preserve errno
	  before other library calls and use rb_syserr_fail.
	  [ruby-core:68531] [Bug #10975]

Thu Apr 30 16:22:16 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lambda): push and reset cmdarg_stack in lambda body.
	  [ruby-core:69017] [Bug #11107]

Sun Apr 26 07:36:48 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/utf_8.c (code_to_mbclen, code_to_mbc): reject values larger
	  than UTF-8 max codepoints.  [Feature #11094]

Sat Apr 25 14:26:19 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_buf_cat): expand later so that the buffer can be
	  larger for further use.  [Bug #11080] [Bug #11095]

Fri Apr 24 23:48:45 2015  Akinori MUSHA  <knu@iDaemons.org>

	* misc/ruby-electric.el: Import version 2.2.3 from
	  https://github.com/knu/ruby-electric.el.

Fri Apr 24 10:40:02 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_{getc,putc}): removed.  they are needed for old
	  ruby (before 1.8), but not now.

Fri Apr 24 08:40:13 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/win32.c: remove bcc related code.

	* include/ruby/win32.h: ditto.

Fri Apr 24 08:21:07 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* win32/win32.c (rb_acrt_lowio_lock_fh): wrap _pioinfo(i)->lock.
